--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
             </div>
             <div class="row">
                 <div id="separatorBlock" class="col-md-8 col-md-offset-2">
-                    <div id="diamond1" class="diamond col-md-offset-1 pull-left"></div>
-                    <div id="separatorLine" class="col-md-10 pull-left"></div>
+                    <div id="diamond1" class="diamond pull-left"></div>
+                    <div id="separatorLine" class="col-md-12 pull-left"></div>
                     <div id="diamond2" class="diamond pull-left"></div>
 
                 </div>
                 <div id="detailsBlock" class="col-md-8 col-md-offset-2">
                     <div class="row">
-                        <div class="col-md-5 col-md-offset-2">
+                        <div class="col-md-5 col-md-offset-1">
                             <div class="detailsTitle"><span> WORK </span></div>
                             <div class="detailsHeader"><span> Fuel Publicidade </span></div>
                             <div class="detailsDescription"><span>Digital Designer Jr. - 04/2014 - Currently</span></div>
@@ -87,7 +87,7 @@
                         </div>                
                     </div> 
                     <div id="DetailsSecondLine" class="row">
-                        <div class="col-md-4 col-md-offset-2">
+                        <div class="col-md-4 col-md-offset-1">
                                     <div class="detailsTitle"><span> SKILLS </span></div>
                                     <div class="row">
                                         <div id="SkillsBar" class="col-md-10">
@@ -214,7 +214,7 @@
                                             <div class="infographycText col-md-3">
                                                 <div id="TeamPlayer"><span>Team Player</span></div>
                                                 <br>
-                                                <div id="PixelPerfection"><span>Pixel <br> Perfection <br> Porsuiter</span></div>
+                                                <div id="PixelPerfection"><span>Pixel <br> Perfection <br> Pursuiter</span></div>
                                             </div>
                                             <div class="infographycText col-md-3">
                                                 <div id="HighlyMotivated"><span>Highly <br> Motivated</span></div>
