--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <script src="js/jquery-2.1.3.min.js"> </script>
         <script src="js/bootstrap.min.js"> </script>
         <script src="js/home.js"> </script>
+        <script src="js/glitch.js"> </script>
         </head>
     <body>
+        <canvas id="canvas"></canvas>
         <nav class="navbar">
           <div class="container-fluid">
             <!-- Collect the nav links, forms, and other content for toggling -->
