[UPD] Updated responsive stuff and shietz

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <script src="js/glitch.js"> </script>
         </head>
     <body>
-        <canvas id="canvas"></canvas>
         <nav class="navbar">
           <div class="container-fluid">
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -27,7 +26,8 @@
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
-        <div class="container">
+        <div class="container-fluid">
+            <canvas id="canvas"></canvas>
             <div class="row">
                 <div id="titleBlock" class="col-md-8 col-md-offset-2">
                     <div class="row">
