[ADD] SM and LG classes

--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
           <div class="container-fluid">
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="col-md-4 col-md-offset-4 nav">
-                        <li id="LinkHome" class="regular col-md-4" role="presentation"><a href="#">HOME</a></li>
-                        <li id="LinkWorks" class="regular col-md-4" role="presentation"><a href="#">WORKS</a></li>
-                        <li id="LinkBlog" class="regular col-md-4" role="presentation"><a href="#">BLOG</a></li>
+                    <ul class="col-md-4 col-md-offset-4 col-lg-4 col-sm-4 col-lg-offset-4 col-sm-offset-4 nav">
+                        <li id="LinkHome" class="regular col-md-4 col-lg-4 col-sm-4 " role="presentation"><a href="#">HOME</a></li>
+                        <li id="LinkWorks" class="regular col-lg-4 col-sm-4 col-md-4" role="presentation"><a href="#">WORKS</a></li>
+                        <li id="LinkBlog" class="regular col-lg-4 col-sm-4 col-md-4" role="presentation"><a href="#">BLOG</a></li>
                     </ul>        
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
-        <div class="container-fluid">
+        <div class="container">
             <canvas id="canvas"></canvas>
             <div class="row">
-                <div id="titleBlock" class="col-md-8 col-md-offset-2">
+                <div id="titleBlock" class="col-md-8 col-lg-8 col-sm-8 col-md-offset-2 col-lg-offset-2 col-sm-offset-2">
                     <div class="row">
-                        <div class="col-md-12 titleFont">
+                        <div class="col-md-12 col-lg-12 col-sm-12 titleFont">
                             <span>PAULO MOURA</span>
                         </div>
                     </div>
@@ -41,9 +41,9 @@
                         </div>
                     </div>
                 </div>
-                <div id="descriptionBlock" class="col-md-8 col-md-offset-2">
+                <div id="descriptionBlock" class="col-md-8 col-lg-8 col-sm-8 col-md-offset-2 col-lg-offset-2 col-sm-offset-2">
                     <div class="row">
-                        <div class="col-md-12 descriptionFont">
+                        <div class="col-md-12 col-lg-12 col-sm-12 descriptionFont">
                             <span>
                                 Paulo Moura, is a Portuguese Art Director, Digital Designer and Photographer living in Estoril/Lisbon. 
                                 <br/>
@@ -58,15 +58,15 @@
                 </div>
             </div>
             <div class="row">
-                <div id="separatorBlock" class="col-md-8 col-md-offset-2">
+                <div id="separatorBlock" class="col-md-8 col-lg-8 col-sm-8 col-md-offset-2 col-lg-offset-2 col-sm-offset-2">
                     <div id="diamond1" class="diamond pull-left"></div>
-                    <div id="separatorLine" class="col-md-12 pull-left"></div>
+                    <div id="separatorLine" class="col-md-12 col-lg-12 col-sm-12 pull-left"></div>
                     <div id="diamond2" class="diamond pull-left"></div>
 
                 </div>
-                <div id="detailsBlock" class="col-md-8 col-md-offset-2">
+                <div id="detailsBlock" class="col-md-8 col-lg-8 col-sm-8 col-md-offset-2 col-sm-offset-2 col-lg-offset-2">
                     <div class="row">
-                        <div class="col-md-5 col-md-offset-1">
+                        <div class="col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1 col-sm-5 col-sm-offset-1">
                             <div class="detailsTitle"><span> WORK </span></div>
                             <div class="detailsHeader"><span> Fuel Publicidade </span></div>
                             <div class="detailsDescription"><span>Digital Designer Jr. - 04/2014 - Currently</span></div>
@@ -77,7 +77,7 @@
                             <div class="detailsHeader"><span> Jornal E </span></div>
                             <div class="detailsDescription"><span> Art Director/Photojournalist - 11/2012 - 10/2013</span></div>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5 col-lg-5 col-sm-5">
                             <div class="detailsTitle"><span> STUDY </span></div>
                             <div class="detailsHeader"><span> AR.CO </span></div>
                             <div class="detailsDescription"><span>Illustration - Currently</span></div>
@@ -89,10 +89,10 @@
                         </div>                
                     </div> 
                     <div id="DetailsSecondLine" class="row">
-                        <div class="col-md-4 col-md-offset-1">
+                        <div class="col-md-4 col-md-offset-1 col-sm-4 col-sm-offset-1 col-lg-4 col-lg-offset-1">
                                     <div class="detailsTitle"><span> SKILLS </span></div>
                                     <div class="row">
-                                        <div id="SkillsBar" class="col-md-10">
+                                        <div id="SkillsBar" class="col-sm-10 col-lg-10 col-md-10">
                                             <div id="ps" class="levelBarContainer pull-left">
                                                 <div class="levelBar">
                                                     <div class="bar"></div>
@@ -210,15 +210,15 @@
                                         </div>
                             </div>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5 col-lg-5 col-sm-5">
                             <div class="row">
-                                <div id="InfographySection" class="col-md-12">
-                                            <div class="infographycText col-md-3">
+                                <div id="InfographySection" class="col-md-12 col-lg-12 col-sm-12">
+                                            <div class="infographycText col-md-3 col-lg-3 col-sm-3">
                                                 <div id="TeamPlayer"><span>Team Player</span></div>
                                                 <br>
                                                 <div id="PixelPerfection"><span>Pixel <br> Perfection <br> Pursuiter</span></div>
                                             </div>
-                                            <div class="infographycText col-md-3">
+                                            <div class="infographycText col-md-3 col-lg-3 col-sm-3">
                                                 <div id="HighlyMotivated"><span>Highly <br> Motivated</span></div>
                                                 <br>
                                                 <div id="FastLearner" ><span>Fast <br> Learner</span></div>
@@ -240,11 +240,11 @@
         <div class="container-fluid">
             <div class="row">
                 <div id="footer">
-                    <div class="col-md-8 col-md-offset-2">
+                    <div class="col-md-8 col-lg-8 col-sm-8 col-md-offset-2 col-sm-offset-2 col-lg-offset-2">
                         <div class="footerTitle"> <span>Contact me</span> </div>
                         <div class="row">
                             <form action="" method="">
-                                <div class="footerForm col-md-4">
+                                <div class="footerForm col-md-4 col-lg-4 col-sm-4">
                                     <div class="FieldSection">
                                         <label for="nameField">Name</label>
                                         <input name="NameField" type="text"/>
@@ -258,7 +258,7 @@
                                         <input name="titleField" type="text"/>
                                     </div>
                                 </div>
-                                <div class="footerForm col-md-4">
+                                <div class="footerForm col-md-4 col-lg-4 col-sm-4">
                                     <div id="MessagePanel" class="FieldSection">
                                         <label for="messageField">Message</label>
                                         <br>
@@ -269,13 +269,13 @@
                                     <div id="diamond3" class="diamond"></div>
                                     <div id="diamond4" class="diamond"></div>
                                 </div>
-                                <div class="social footerForm col-md-3">
+                                <div class="social footerForm col-md-3 col-sm-3 col-lg-3">
                                     <div class="row">
-                                        <div class="col-md-4"><div id="Be" class="SocialIcon"></div></div>
-                                        <div class="col-md-4"><div id="Fb" class="SocialIcon"></div></div>
-                                        <div class="col-md-4"><div id="Li" class="SocialIcon"></div></div>
+                                        <div class="col-md-4 col-sm-4 col-lg-4"><div id="Be" class="SocialIcon"></div></div>
+                                        <div class="col-md-4 col-sm-4 col-lg-4"><div id="Fb" class="SocialIcon"></div></div>
+                                        <div class="col-md-4 col-sm-4 col-lg-4"><div id="Li" class="SocialIcon"></div></div>
                                     </div>                                    <div class="row">
-                                        <div class="col-md-12 socialEmail"><span>paulomoura@digitalpoint.com.pt</span></div>
+                                        <div class="col-md-12 col-sm-12 col-lg-12 socialEmail"><span>paulomoura@digitalpoint.com.pt</span></div>
                                     </div>
                                 </div>
                                 
