[FIX] Fixed some shitty

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
-        <div class="container">
+        <div class="container-fluid">
             <canvas id="canvas"></canvas>
             <div class="row">
                 <div id="titleBlock" class="col-md-8 col-lg-8 col-sm-8 col-md-offset-2 col-lg-offset-2 col-sm-offset-2">
