--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div id="diamond2" class="diamond pull-left"></div>
 
                 </div>
-                <div id="detailsBlock" class="col-md-8 col-lg-8 col-sm-8 col-md-offset-2 col-sm-offset-2 col-lg-offset-2">
+                <div id="detailsBlock" class="col-md-8 col-lg-8 col-sm-10 col-md-offset-2 col-sm-offset-1 col-lg-offset-2">
                     <div class="row">
                         <div class="col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1 col-sm-5 col-sm-offset-1">
                             <div class="detailsTitle"><span> WORK </span></div>
@@ -89,7 +89,7 @@
                         </div>                
                     </div> 
                     <div id="DetailsSecondLine" class="row">
-                        <div class="col-md-4 col-md-offset-1 col-sm-4 col-sm-offset-1 col-lg-4 col-lg-offset-1">
+                        <div class="col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1 col-lg-4 col-lg-offset-1">
                                     <div class="detailsTitle"><span> SKILLS </span></div>
                                     <div class="row">
                                         <div id="SkillsBar" class="col-sm-10 col-lg-10 col-md-10">
@@ -210,10 +210,10 @@
                                         </div>
                             </div>
                         </div>
-                        <div class="col-md-5 col-lg-5 col-sm-5">
+                        <div class="col-md-5 col-lg-5 col-sm-6 col-lg-offset-1">
                             <div class="row">
                                 <div id="InfographySection" class="col-md-12 col-lg-12 col-sm-12">
-                                            <div class="infographycText col-md-3 col-lg-3 col-sm-3">
+                                            <div id="firstInfographyc" class="infographycText col-md-3 col-lg-3 col-sm-3">
                                                 <div id="TeamPlayer"><span>Team Player</span></div>
                                                 <br>
                                                 <div id="PixelPerfection"><span>Pixel <br> Perfection <br> Pursuiter</span></div>
@@ -278,8 +278,6 @@
                                         <div class="col-md-12 col-sm-12 col-lg-12 socialEmail"><span>paulomoura@digitalpoint.com.pt</span></div>
                                     </div>
                                 </div>
-                                
-
                             </form>
                         </div>
                     </div>
