--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="container">
             <div class="row">
-                <div id="separatorBlock" class="col-md-8 col-lg-8 col-sm-8 col-md-offset-2 col-lg-offset-2 col-sm-offset-2">
+                <div id="separatorBlock" class="col-md-offset-2 col-lg-offset-3 col-sm-offset-1">
                     <div id="diamond1" class="diamond pull-left"></div>
-                    <div id="separatorLine" class="col-md-12 col-lg-12 col-sm-12 pull-left"></div>
+                    <div id="separatorLine" class="pull-left"></div>
                     <div id="diamond2" class="diamond pull-left"></div>
-
                 </div>
-                <div id="detailsBlock" class="col-md-8 col-lg-8 col-sm-10 col-md-offset-2 col-sm-offset-1 col-lg-offset-2">
-                    <div class="row">
-                        <div class="col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1 col-sm-5 col-sm-offset-1">
+                <div id="detailsContainer" class="col-md-offset-2 col-sm-offset-1 col-lg-offset-3">
+                        <div class="detailsBlock">
                             <div class="detailsTitle"><span> WORK </span></div>
                             <div class="detailsHeader"><span> Fuel Publicidade </span></div>
                             <div class="detailsDescription"><span>Digital Designer Jr. - 04/2014 - Currently</span></div>
@@ -77,7 +77,7 @@
                             <div class="detailsHeader"><span> Jornal E </span></div>
                             <div class="detailsDescription"><span> Art Director/Photojournalist - 11/2012 - 10/2013</span></div>
                         </div>
-                        <div class="col-md-5 col-lg-5 col-sm-5">
+                        <div class="detailsBlock">
                             <div class="detailsTitle"><span> STUDY </span></div>
                             <div class="detailsHeader"><span> AR.CO </span></div>
                             <div class="detailsDescription"><span>Illustration - Currently</span></div>
@@ -86,13 +86,10 @@
                             <div class="detailsHeader"><span> EPRAL </span></div>
                             <div class="detailsDescription"><span>Multimedia - 09/2008 - 07/2011</span></div>
                             <div id="BreakIcon" class="detailsHeader"><img src="images/break.png"></div>
-                        </div>                
-                    </div> 
-                    <div id="DetailsSecondLine" class="row">
-                        <div class="col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1 col-lg-4 col-lg-offset-1">
+                        </div>          
+                        <div class="detailsBlock">
                                     <div class="detailsTitle"><span> SKILLS </span></div>
-                                    <div class="row">
-                                        <div id="SkillsBar" class="col-sm-10 col-lg-10 col-md-10">
+                                        <div id="SkillsBar" class="">
                                             <div id="ps" class="levelBarContainer pull-left">
                                                 <div class="levelBar">
                                                     <div class="bar"></div>
@@ -209,20 +206,22 @@
                                             </div>
                                         </div>
                             </div>
-                        </div>
-                        <div class="col-md-5 col-lg-5 col-sm-6 col-lg-offset-1">
-                            <div class="row">
-                                <div id="InfographySection" class="col-md-12 col-lg-12 col-sm-12">
-                                            <div id="firstInfographyc" class="infographycText col-md-3 col-lg-3 col-sm-3">
-                                                <div id="TeamPlayer"><span>Team Player</span></div>
-                                                <br>
-                                                <div id="PixelPerfection"><span>Pixel <br> Perfection <br> Pursuiter</span></div>
-                                            </div>
-                                            <div class="infographycText col-md-3 col-lg-3 col-sm-3">
-                                                <div id="HighlyMotivated"><span>Highly <br> Motivated</span></div>
-                                                <br>
-                                                <div id="FastLearner" ><span>Fast <br> Learner</span></div>
-                                            </div>
+                        <div class="detailsBlock">
+                                <div id="InfographySection" class="">
+                                    <div class="circleInnerText infographycText">
+                                                <div id="TeamPlayer" class="infographycText">
+                                                    <span>Team <br> Player</span>
+                                                </div>
+                                                <div id="HighlyMotivated" class="infographycText">
+                                                    <span>Highly <br> Motivated</span>
+                                                </div>
+                                                <div id="PixelPerfection" class="infographycText">
+                                                    <span>Pixel <br> Perfection <br> Pursuiter</span>
+                                                </div>
+                                                <div id="FastLearner" class="infographycText">
+                                                    <span>Fast <br> Learner</span>
+                                                </div>
+                                    </div>
                                     <div id="circleOut">
                                         <div id="circleIn">
                                             <div id="circleRed">
@@ -231,7 +230,6 @@
                                     </div>
                                     <!-- <div class="detailsTitle"><img src="images/infographic.png"></div> -->
                                 </div>
-                            </div>
                         </div>                
                     </div>
                 </div>
