[UPD] Changed back to relative, and refactored the separator

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container-fluid">
             <canvas id="canvas"></canvas>
             <div class="row">
-                <div id="titleBlock" class="col-md-8 col-lg-8 col-sm-8 col-md-offset-2 col-lg-offset-2 col-sm-offset-2">
+                <div id="titleBlock" class="col-md-8 col-lg-8 col-sm-8 col-xs-12 col-md-offset-2 col-lg-offset-2 col-sm-offset-2">
                     <div class="row">
                         <div class="col-md-12 col-lg-12 col-sm-12 titleFont">
                             <span>PAULO MOURA</span>
@@ -60,16 +60,11 @@
         </div>
         <div class="container">
             <div class="row">
-                <div id="separatorBlock" class="col-md-offset-2 col-lg-offset-3 col-sm-offset-1">
-                    <div id="diamond1" class="diamond pull-left"></div>
-                    <div id="separatorLine" class="pull-left"></div>
-                    <div id="diamond2" class="diamond pull-left"></div>
+                <div id="separatorBlock" class="col-lg-8 col-md-10 col-sm-12 col-md-offset-1 col-lg-offset-2">
                 </div>
-                <div id="detailsContainer" class="clearfix col-md-offset-2 col-sm-offset-1 col-lg-offset-3">
-                    <table>
-                        <tr>
-                            <td>
-                                <div class="detailsBlock">
+                <div id="detailsContainer" class="clearfix col-sm-10 col-md-8 col-lg-6 col-md-offset-2 col-sm-offset-1 col-lg-offset-3">      
+                            <div class="row">
+                                <div class="detailsBlock col-lg-7 col-md-7 col-sm-7">
                                     <div class="detailsTitle"><span> WORK </span></div>
                                     <div class="detailsHeader"><span> Fuel Publicidade </span></div>
                                     <div class="detailsDescription"><span>Digital Designer Jr. - 04/2014 - Currently</span></div>
@@ -80,9 +75,8 @@
                                     <div class="detailsHeader"><span> Jornal E </span></div>
                                     <div class="detailsDescription"><span> Art Director/Photojournalist - 11/2012 - 10/2013</span></div>
                                 </div>
-                            </td>
-                            <td>
-                                <div class="detailsBlock">
+
+                                <div class="detailsBlock col-lg-5 col-md-5 col-sm-5">
                                     <div class="detailsTitle"><span> STUDY </span></div>
                                     <div class="detailsHeader"><span> AR.CO </span></div>
                                     <div class="detailsDescription"><span>Illustration - Currently</span></div>
@@ -92,11 +86,8 @@
                                     <div class="detailsDescription"><span>Multimedia - 09/2008 - 07/2011</span></div>
                                     <div id="BreakIcon" class="detailsHeader"><img src="images/break.png"></div>
                                 </div>          
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <div class="detailsBlock">
+
+                                <div class="detailsBlock col-lg-6 col-md-6 col-sm-6">
                                             <div class="detailsTitle"><span> SKILLS </span></div>
                                                 <div id="SkillsBar" class="">
                                                     <div id="ps" class="levelBarContainer pull-left">
@@ -216,9 +207,8 @@
                                                 </div>
                                                 </td>
                                 </div>
-                            </td>
-                            <td>
-                                <div class="detailsBlock">
+
+                                <div class="detailsBlock col-lg-6 col-md-6 col-sm-6">
                                         <div id="InfographySection" class="">
                                             <div class="circleInnerText infographycText">
                                                         <div id="TeamPlayer" class="infographycText">
@@ -243,9 +233,7 @@
                                             <!-- <div class="detailsTitle"><img src="images/infographic.png"></div> -->
                                         </div>
                                 </div>  
-                            </td>
-                        </tr>
-                        </table>
+                            </div>
                     </div>
                 </div>
             </div>
