[UPD] Alligned footer

--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div id="footer">
-                    <div class="col-md-8 col-lg-8 col-sm-8 col-md-offset-2 col-sm-offset-2 col-lg-offset-2">
+                <div class="container">
+                    <div class="col-sm-10 col-md-8 col-lg-6 col-md-offset-2 col-sm-offset-1 col-lg-offset-3">
                         <div class="footerTitle"> <span>Contact me</span> </div>
                         <div class="row">
                             <form action="" method="">
@@ -281,6 +282,7 @@
                                 </div>
                             </form>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
